--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>My first ever website</h1>
-    <h3>Look Mama!!! I can push to github</h3>
+    <p>Felling happy now</p>
+    <p>I am a ghost</p>
 </body>
 </html>
