--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <p>I am a ghost</p>
     <input type="text">
     <br>
-    <button>Click me</button>
+    <button>Click me Baby!!!</button>
 </body>
 </html>
