--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>My first ever website</h1>
     <p>Felling happy now</p>
-    <p>I am a ghost</p>
+    <p>I am a lover girl....</p>
 </body>
 </html>
